ser2.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
spec:
  selector:
    app: demo1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
