service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
spec:
  selector:
    app: demo1
  ports:
    - protocol: TCP
      port: 801  #port of the service 
      targetPort: 80  #port of the container #containerPort=targetPort #basically port 80 of container is connected to port 801 of service
  type: ClusterIP 

---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 801  #port of the service 
      targetPort: 80  #port of the container #containerPort=targetPort #basically port 80 of container is connected to port 801 of service
  type: ClusterIP
