ing5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: public.my-services.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /gift/(.*)
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
